<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.NovaCategoriaActivity">

    <TextView
        android:text="@string/autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="textPersonName" />
    <TextView
        android:text="@string/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="textPersonName" />
    <TextView
        android:text="@string/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSalvar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar" />

</LinearLayout>