<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.NovoComentarioActivity">


    <EditText
        android:id="@+id/edit_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autor"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/edit_comentario"
        android:layout_weight="1"
        android:hint="@string/comentario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar" />
</LinearLayout>